--- a/index.ipynb
+++ b/index.ipynb
@@ -288,7 +288,7 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    if restaurant['is_']"
+    "    if restaurant['is_closed']"
    ]
   },
   {
