--- a/index.ipynb
+++ b/index.ipynb
@@ -288,7 +288,9 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    if restaurant['is_closed']:"
+    "    if restaurant['is_closed']:\n",
+    "        pass\n",
+    "    else res"
    ]
   },
   {
