automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -290,7 +290,8 @@
     "def open_restaurants(restaurants):\n",
     "    if restaurant['is_closed']:\n",
     "        pass\n",
-    "    else res"
+    "    else restaurant['is_closed']:\n",
+    "        return "
    ]
   },
   {
