--- a/index.ipynb
+++ b/index.ipynb
@@ -283,15 +283,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-14-4d490c0c6b41>, line 4)",
+     "evalue": "invalid syntax (<ipython-input-15-50984f560e91>, line 4)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-14-4d490c0c6b41>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    else restaurant['is_closed']:\u001b[0m\n\u001b[0m                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-15-50984f560e91>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    else restaurants['is_closed']:\u001b[0m\n\u001b[0m                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -299,8 +299,8 @@
     "def open_restaurants(restaurants):\n",
     "    if restaurants['is_closed']:\n",
     "        pass\n",
-    "    else restaurant['is_closed']:\n",
-    "        return restaurant"
+    "    else restaurants['is_closed']:\n",
+    "        return restaurants"
    ]
   },
   {
