--- a/index.ipynb
+++ b/index.ipynb
@@ -297,7 +297,8 @@
    ],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    for restaurant in restaurants\n",
+    "    for restaurant in restaurants:\n",
+    "        \n",
     "    \n",
     "    if restaurants['is_closed']:\n",
     "        pass\n",
