--- a/index.ipynb
+++ b/index.ipynb
@@ -298,7 +298,7 @@
    "source": [
     "def open_restaurants(restaurants):\n",
     "    for restaurant in restaurants:\n",
-    "        if restaurant['is']\n",
+    "        if restaurant['is_closed']\n",
     "    \n",
     "    if restaurants['is_closed']:\n",
     "        pass\n",
