automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -300,7 +300,7 @@
     "    for restaurant in restaurants:\n",
     "        if restaurant['is_closed']:\n",
     "            pass\n",
-    "        e\n",
+    "        else restaurant['is_closed']\n",
     "    \n",
     "    if restaurants['is_closed']:\n",
     "        pass\n",
