--- a/index.ipynb
+++ b/index.ipynb
@@ -300,12 +300,8 @@
     "    for restaurant in restaurants:\n",
     "        if restaurant['is_closed']:\n",
     "            pass\n",
-    "        else restaurant['is_closed']\n",
-    "    \n",
-    "    if restaurants['is_closed']:\n",
-    "        pass\n",
-    "    else restaurants['is_closed']:\n",
-    "        return restaurants"
+    "        else restaurant['is_closed']:\n",
+    "            return restaurant"
    ]
   },
   {
