--- a/index.ipynb
+++ b/index.ipynb
@@ -297,7 +297,7 @@
    ],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    for restaurant in restaurants:\n",
+    "    for restaurant in restaurants():\n",
     "        if restaurant['is_closed']:\n",
     "            pass\n",
     "        else restaurant['is_closed']:\n",
