--- a/index.ipynb
+++ b/index.ipynb
@@ -298,9 +298,9 @@
    "source": [
     "def open_restaurants(restaurants):\n",
     "    for restaurant in restaurants:\n",
-    "        if restaurant['is_closed']:\n",
+    "        if (restaurant['is_closed']):\n",
     "            pass\n",
-    "        else restaurant['is_closed']:\n",
+    "        else (restaurant['is_closed']:\n",
     "            return restaurant"
    ]
   },
