--- a/index.ipynb
+++ b/index.ipynb
@@ -283,15 +283,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-21-904e628611cf>, line 5)",
+     "evalue": "invalid syntax (<ipython-input-22-0bc48a747225>, line 5)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-21-904e628611cf>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    else (restaurant['is_closed']):\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-22-0bc48a747225>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    else restaurant('is_closed'):\u001b[0m\n\u001b[0m                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -300,7 +300,7 @@
     "    for restaurant in restaurants:\n",
     "        if restaurant('is_closed'):\n",
     "            pass\n",
-    "        else restaurant('is_closed']:\n",
+    "        else restaurant('is_closed'):\n",
     "            return restaurant"
    ]
   },
