--- a/index.ipynb
+++ b/index.ipynb
@@ -283,24 +283,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-22-0bc48a747225>, line 5)",
+     "evalue": "invalid syntax (<ipython-input-23-8348344f304e>, line 5)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-22-0bc48a747225>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    else restaurant('is_closed'):\u001b[0m\n\u001b[0m                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-23-8348344f304e>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    else restaurant['is_closed']:\u001b[0m\n\u001b[0m                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
     "def open_restaurants(restaurants):\n",
     "    for restaurant in restaurants:\n",
-    "        if restaurant('is_closed'):\n",
+    "        if restaurant['is_closed']:\n",
     "            pass\n",
-    "        else restaurant('is_closed'):\n",
+    "        else restaurant['is_closed']:\n",
     "            return restaurant"
    ]
   },
