--- a/index.ipynb
+++ b/index.ipynb
@@ -283,21 +283,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-28-37db8603478d>, line 5)",
+     "evalue": "invalid syntax (<ipython-input-29-1b211ad93f80>, line 5)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-28-37db8603478d>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    else restaurant['is_closed']:\u001b[0m\n\u001b[0m                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-29-1b211ad93f80>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    else restaurant['is_closed']:\u001b[0m\n\u001b[0m                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    for restaurant in restaurants():\n",
+    "    for restaurant in restaurants:\n",
     "        if restaurant['is_closed']:\n",
     "            pass\n",
     "        else restaurant['is_closed']:\n",
