--- a/index.ipynb
+++ b/index.ipynb
@@ -283,19 +283,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
     "    for restaurant in restaurants:\n",
-    "        if not restaurant['is_closed']:\n",
+    "        if restaurant['is_closed']:\n",
     "            return restaurants"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +304,7 @@
        "2"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +324,7 @@
        "'Fork & Fig'"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
