--- a/index.ipynb
+++ b/index.ipynb
@@ -314,6 +314,35 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Fork & Fig'"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "open_restaurants(restaurants)[0]['name'] # 'Fork & Fig'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ope"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
