automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -351,7 +351,7 @@
     }
    ],
    "source": [
-    "open_restaurants(restaurants['name']).str"
+    "listopen_restaurants(restaurants['name'])"
    ]
   },
   {
