automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -283,14 +283,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
     "    for restaurant in restaurants:\n",
     "        if not restaurant['is_closed']:\n",
-    "            return restaurants"
+    "            return restaurants\n",
+    "        else "
    ]
   },
   {
