automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -283,29 +283,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-53-b33991b10802>, line 5)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-53-b33991b10802>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    else pass\u001b[0m\n\u001b[0m            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
     "    for restaurant in restaurants:\n",
     "        if not restaurant['is_closed']:\n",
     "            return restaurants\n",
-    "        if restaurant"
+    "        if restaurant['is_closed']:\n",
+    "            pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +306,7 @@
        "2"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +326,7 @@
        "'Fork & Fig'"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
