--- a/index.ipynb
+++ b/index.ipynb
@@ -317,6 +317,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Fork & Fig'"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "open_restaurants(restaurants)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 63,
    "metadata": {},
    "outputs": [
