--- a/index.ipynb
+++ b/index.ipynb
@@ -288,6 +288,7 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
+    "    output_list = []\n",
     "    for restaurant in restaurants:\n",
     "        if not restaurant['is_closed']:\n",
     "            return list(restaurants)\n",
