--- a/index.ipynb
+++ b/index.ipynb
@@ -291,7 +291,7 @@
     "    output_list = []\n",
     "    for restaurant in restaurants:\n",
     "        if not restaurant['is_closed']:\n",
-    "            return list(restaurants)\n",
+    "            output_list.append()\n",
     "        if restaurant['is_closed']:\n",
     "            pass"
    ]
