automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -293,7 +293,8 @@
     "        if not restaurant['is_closed']:\n",
     "            output_list.append(restaurant)\n",
     "        if restaurant['is_closed']:\n",
-    "            pass"
+    "            pass\n",
+    "    return ou"
    ]
   },
   {
